--- a/Hotel/View_layer/Styles/EstiloBotones.xaml
+++ b/Hotel/View_layer/Styles/EstiloBotones.xaml
@@ -65,10 +65,11 @@
     <!--Control button-->
 
     <Style x:Key="controlButton" TargetType="Button">
-        <Setter Property="Height" Value="20"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Width" Value="25"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="{DynamicResource tittleColor1}"/>
-        <Setter Property="Margin" Value="0,0,6,0"/>
+        <Setter Property="Margin" Value="0,0,9,0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
