--- a/Hotel/View_layer/ViewQuote.xaml
+++ b/Hotel/View_layer/ViewQuote.xaml
@@ -23,12 +23,12 @@
             <StackPanel Grid.Column="0"
                                     Orientation="Horizontal"
                                     VerticalAlignment="Center">
-                <fa:IconImage Icon="MoneyBill"
+                <fa:IconImage Icon="CommentDollar"
                                           Height="24"
                                           Width="24"
                                           Foreground="{StaticResource tittleColor1}"
                                           Margin="35,0,10,0"/>
-                <TextBlock Text="Cotizacion"
+                <TextBlock Text="Cotización"
                                        Foreground="{StaticResource tittleColor1}"
                                        FontSize="16"
                                        FontFamily="Alegreya Medium"
